# iceworm

./: .dockerignore  .gitignore  MANIFEST.in  Makefile  README.md  TODO  docker-dev  pyproject.toml  requirements-dev.txt  requirements-frz.txt  requirements.txt  setup.cfg  setup.py
docker/: Makefile  docker-compose.yml
docker/iceworm-dev/: Dockerfile
docker/iceworm-hadoop/: Dockerfile  hadoop-env.sh
docker/iceworm-postgres/: Dockerfile
iceworm/: SnowflakeSql.g4  __about__.py  __init__.py  alchemy.py  analysis.py  bootstrap.py  cli.py  conftest.py  conns.py  datatypes.py  db.py  domains.py  jinja.py  js.py  main.py  metadata.py  nodes.py  parsing.py  postgres.py  proxy.py  rendering.py  revision.py  serde.py  server.py  snowflake.py  sql.py  symbols.py  tpch.py  transforms.py  types.py  utils.py
iceworm-js/: Makefile  test.sql
iceworm-js/udfs/: Makefile  blob.js
iceworm-js/ui/: .gitignore  Makefile  package-lock.json  package.json  vue.config.js
iceworm-jvm/: Makefile  pom-deps.xml  pom.xml
iceworm-jvm/iceworm-core/: pom.xml
iceworm-jvm/iceworm-dist/: pom.xml
iceworm-jvm/iceworm-spark/: pom.xml
iceworm-jvm/iceworm-tool/: pom.xml
iceworm-rs/: Cargo.toml  Makefile
iceworm-rs/src/: lib.rs
iceworm-spark/: .gitignore  Makefile  pom.xml
iceworm/_antlr/: SnowflakeSql.interp  SnowflakeSql.tokens  SnowflakeSqlLexer.interp  SnowflakeSqlLexer.py  SnowflakeSqlLexer.tokens  SnowflakeSqlListener.py  SnowflakeSqlParser.py  SnowflakeSqlVisitor.py
iceworm/engine/: __init__.py  caching.py  connectors.py  coord.py  (+23 more)
js/: Makefile  test.sql
spark/: Makefile
(+385 files in other folders)
